--- a/Code/Diary/app/src/main/res/layout/activity_main.xml
+++ b/Code/Diary/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="fill_parent">
 
     <TabHost
             android:layout_width="match_parent"
@@ -166,5 +166,5 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Выход"
-            android:id="@+id/button4" android:layout_gravity="bottom|right"/>
+            android:id="@+id/button4" android:layout_gravity="bottom|right" android:onClick="exit"/>
 </LinearLayout>
